// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageRoute component modal snapshot 1`] = `
<AuthenticatedPageRoute>
  <AppContainer>
    <SkeletonTheme
      baseColor="#888"
      highlightColor="#444"
    >
      <ModalContainer>
        <b>
          test children
        </b>
      </ModalContainer>
    </SkeletonTheme>
  </AppContainer>
</AuthenticatedPageRoute>
`;

exports[`PageRoute component non-modal snapshot 1`] = `
<AuthenticatedPageRoute>
  <AppContainer>
    <SkeletonTheme
      baseColor="#888"
      highlightColor="#444"
    >
      <b>
        test children
      </b>
    </SkeletonTheme>
  </AppContainer>
</AuthenticatedPageRoute>
`;
